add html backup

--- a/UsefulData/HTMLFiles/2014_09_18.html
+++ b/UsefulData/HTMLFiles/2014_09_18.html
@@ -35,7 +35,7 @@
 <table width=738 border=0 cellspacing=0 cellpadding=0 bgcolor=#DDEEDD>
 <tr  align=left><a name=130></a>
 <font size=1 color=#CC6633 face='Verdana, Arial, Helvetica, sans-serif'><b>Free soccer predictions for week of matches between 16-Sep and 22-Sep-2014</b>
-<br><font size=1 face='Verdana, Arial, Helvetica, sans-serif' color=#CC6633>Last Update at ...&nbsp;&nbsp;19-Sep 2014 07:09  UTC </font></td></tr></table><br>
+<br><font size=1 face='Verdana, Arial, Helvetica, sans-serif' color=#CC6633>Last Update at ...&nbsp;&nbsp;20-Sep 2014 19:06  UTC </font></td></tr></table><br>
 <table style='text-align: left; margin-left: auto; margin-right: auto; width: 738px; height: 90px;' border=0 cellpadding=1 cellspacing=1>
 <tbody><tr> <td style='vertical-align:top' height=14> <div>
 <script type='text/javascript'><!--
@@ -100,93 +100,93 @@ Thursday 18-Sep |
 <tr class=f1><td class=f11>14:00</td>
 <td><span class='scflag2 f2215_IRI'>&nbsp;</span>&nbsp;IR1</td>
 <td onmouseover='mov(event,1)' onmouseout='mou()'><pre class=pr3>PEYKAN - MALAVAN           </pre></td>
-<td class=pl30>34 </td><td class=pr30>34</td><td class=pl30>32</td>
+<td class=pr30>34 </td><td class=pl30>34</td><td class=pl30>32</td>
 <td class=Fai1><span class='sctip tip_emp'>&nbsp;</span>emp</td>
-<td class=al30>2.35</td><td class=ar40>3.05</td><td class=al40>3.18</td><td class=f1l><b>1</b>-0 </td><td class=f1l><b>1</b>-<b>1</b></td><td class=f11>53 </td><td class=f11w>47</td><td class=f1r>1-1</td></tr>
+<td class=ar30>2.35</td><td class=al40>3.05</td><td class=al40>3.18</td><td class=f1l><b>1</b>-<b>0</b> </td><td class=f1l><b>1</b>-1</td><td class=f11>53 </td><td class=f11w>47</td><td class=f1r>1-0</td></tr>
 <tr class=f2><td class=f21>14:00</td>
 <td><span class='scflag2 f2215_IRI'>&nbsp;</span>&nbsp;IR1</td>
 <td onmouseover='mov(event,2)' onmouseout='mou()'><pre>RAH AHAN - PERSEPOLIS        </pre></td>
 <td class=pl25>19 </td><td class=pl25>29</td><td class=pr45>52</td>
 <td class=Fai2><span class='sctip tip_r2'>&nbsp;</span>r2</td>
 <td class=al30>2.70</td><td class=al30>2.95</td><td class=ar30>2.85</td><td class=f2l>0-1 </td><td class=f2l>0-<b>2</b></td><td class=f21w>51 </td><td class=f21>49</td><td class=f2r>1-2</td></tr>
-<tr class=f1><td class=f11>01:00</td>
+<tr class=f1><td class=f11>00:00</td>
 <td><span class='scflag2 f2215_ARG'>&nbsp;</span>&nbsp;AR2</td>
-<td onmouseover='mov(event,3)' onmouseout='mou()'><pre class=pr3>GUARANI A. FRANCO - FERRO CARRIL OESTE</pre></td>
+<td onmouseover='mov(event,3)' onmouseout='mou()'><pre class=pr3>ALDOSIVI - DOUGLAS HAIG      </pre></td>
+<td class=pl65>69 </td><td class=pr25>22</td><td class=pl25>9 </td>
+<td class=Fai1><span class='sctip tip_w1'>&nbsp;</span>w1</td>
+<td class=al20>1.80</td><td class=ar40>3.10</td><td class=al50>4.30</td><td class=f1l>2-0 </td><td class=f1l>3-0</td><td class=f11>43 </td><td class=f11w>57</td><td class=f1r>1-1</td></tr>
+<tr class=f2><td class=f21>01:00</td>
+<td><span class='scflag2 f2215_ARG'>&nbsp;</span>&nbsp;AR2</td>
+<td onmouseover='mov(event,4)' onmouseout='mou()'><pre>GUARANI A. FRANCO - FERRO CARRIL OESTE</pre></td>
 <td class=pl35>38 </td><td class=pr30>32</td><td class=pl30>30</td>
-<td class=Fai1><span class='sctip tip_emp'>&nbsp;</span>emp</td>
-<td class=al30>2.50</td><td class=ar30>2.85</td><td class=al30>2.80</td><td class=f1l><b>1</b>-0 </td><td class=f1l>0-0</td><td class=po45>60 </td><td class=f11w>40</td><td class=f1r>1-1</td></tr>
-<tr class=f2><td class=f21>01:00</td>
-<td><span class='scflag2 f2215_ARG'>&nbsp;</span>&nbsp;AR2</td>
-<td onmouseover='mov(event,4)' onmouseout='mou()'><pre>INDEP. RIVADAVIA - ALL BOYS          </pre></td>
-<td class=pl35>38 </td><td class=pr30>30</td><td class=pl30>32</td>
 <td class=Fai2><span class='sctip tip_emp'>&nbsp;</span>emp</td>
-<td class=al20>2.18</td><td class=ar30>2.90</td><td class=al40>3.25</td><td class=f2l>1-<b>0</b> </td><td class=f2l><b>0</b>-1</td><td class=f21>54 </td><td class=f21w>46</td><td class=f2r>0-0</td></tr>
+<td class=al30>2.50</td><td class=ar30>2.85</td><td class=al30>2.80</td><td class=f2l><b>1</b>-0 </td><td class=f2l>0-0</td><td class=po45>60 </td><td class=f21w>40</td><td class=f2r>1-1</td></tr>
 <tr class=f1><td class=f11>01:00</td>
 <td><span class='scflag2 f2215_ARG'>&nbsp;</span>&nbsp;AR2</td>
-<td onmouseover='mov(event,5)' onmouseout='mou()'><pre class=pr3>PATRONATO - ATLETICO TUCUMAN  </pre></td>
-<td class=pl35>37 </td><td class=pr30>31</td><td class=pl30>32</td>
+<td onmouseover='mov(event,5)' onmouseout='mou()'><pre class=pr3>INDEP. RIVADAVIA - ALL BOYS          </pre></td>
+<td class=pl35>38 </td><td class=pr30>30</td><td class=pl30>32</td>
 <td class=Fai1><span class='sctip tip_emp'>&nbsp;</span>emp</td>
-<td class=al30>2.45</td><td class=ar30>2.90</td><td class=al30>2.85</td><td class=f1l><b>1</b>-0 </td><td class=f1l>2-0</td><td class=f11>58 </td><td class=f11w>42</td><td class=f1r>1-1</td></tr>
+<td class=al20>2.18</td><td class=ar30>2.90</td><td class=al40>3.25</td><td class=f1l>1-<b>0</b> </td><td class=f1l><b>0</b>-1</td><td class=f11>54 </td><td class=f11w>46</td><td class=f1r>0-0</td></tr>
 <tr class=f2><td class=f21>01:00</td>
 <td><span class='scflag2 f2215_ARG'>&nbsp;</span>&nbsp;AR2</td>
-<td onmouseover='mov(event,6)' onmouseout='mou()'><pre>SARMIENTO JUNIN - SANTA MARINA      </pre></td>
-<td class=pl65>73 </td><td class=pr25>20</td><td class=pl25>7 </td>
-<td class=Fai2><span class='sctip tip_w1'>&nbsp;</span>w1</td>
-<td class=al20>1.85</td><td class=ar40>3.15</td><td class=al50>4.15</td><td class=f2l><b>2</b>-0 </td><td class=f2l>3-0</td><td class=f21w>43 </td><td class=f21>57</td><td class=f2r>2-2</td></tr>
-<tr class=f1><td class=f11>22:00</td>
-<td><span class='scflag2 f2215_ARG'>&nbsp;</span>&nbsp;ARC</td>
-<td onmouseover='mov(event,7)' onmouseout='mou()'><pre class=pr3>RACING CLUB - ARGENTINOS        </pre></td>
-<td class=pl55>59 </td><td class=pl25>25</td><td class=pr25>16</td>
-<td class=Fai1><span class='sctip tip_w1'>&nbsp;</span>w1</td>
-<td class=al20>2.05</td><td class=al40>3.05</td><td class=ar40>3.59</td><td class=f1l>1-0 </td><td class=f1l>2-0</td><td class=f11>52 </td><td class=f11w>48</td><td class=f1r>0-1</td></tr>
-<tr class=f2><td class=f21>02:00</td>
-<td><span class='scflag2 f2215_BRA'>&nbsp;</span>&nbsp;BR1</td>
-<td onmouseover='mov(event,8)' onmouseout='mou()'><pre>BOTAFOGO - BAHIA             </pre></td>
-<td class=pl55>59 </td><td class=pl25>25</td><td class=pr25>16</td>
-<td class=Fai2><span class='sctip tip_w1'>&nbsp;</span>w1</td>
-<td class=al20>1.85</td><td class=al40>3.25</td><td class=ar50>4.18</td><td class=f2l>1-0 </td><td class=f2l><b>2</b>-0</td><td class=f21w>51 </td><td class=f21>49</td><td class=f2r>2-3</td></tr>
-<tr class=f1><td class=f11>23:30</td>
-<td><span class='scflag2 f2215_BRA'>&nbsp;</span>&nbsp;BR1</td>
-<td onmouseover='mov(event,9)' onmouseout='mou()'><pre class=pr3>CORINTHIANS - CHAPECOENSE       </pre></td>
-<td class=pl75>76 </td><td class=pr25>19</td><td class=pl25>5 </td>
-<td class=Fai1><span class='sctip tip_w1'>&nbsp;</span>w1</td>
-<td class=al10>1.40</td><td class=ar50>4.00</td><td class=al60>7.50</td><td class=f1l>2-0 </td><td class=f1l><b>1</b>-0</td><td class=f11>49 </td><td class=f11w>51</td><td class=f1r>1-1</td></tr>
-<tr class=f2><td class=f21>02:00</td>
-<td><span class='scflag2 f2215_BRA'>&nbsp;</span>&nbsp;BR1</td>
-<td onmouseover='mov(event,10)' onmouseout='mou()'><pre>CORITIBA - SAO PAULO         </pre></td>
-<td class=pr25>25 </td><td class=pl30>30</td><td class=pl45>45</td>
-<td class=Fai2><span class='sctip tip_w2X'>&nbsp;</span>w2X</td>
-<td class=ar30>2.60</td><td class=al40>3.10</td><td class=al30>2.60</td><td class=f2l>0-<b>1</b> </td><td class=f2l>0-2</td><td class=f21w>49 </td><td class=f21>51</td><td class=f2r>3-1</td></tr>
+<td onmouseover='mov(event,6)' onmouseout='mou()'><pre>PATRONATO - ATLETICO TUCUMAN  </pre></td>
+<td class=pl35>37 </td><td class=pr30>31</td><td class=pl30>32</td>
+<td class=Fai2><span class='sctip tip_emp'>&nbsp;</span>emp</td>
+<td class=al30>2.45</td><td class=ar30>2.90</td><td class=al30>2.85</td><td class=f2l><b>1</b>-0 </td><td class=f2l>2-0</td><td class=f21>58 </td><td class=f21w>42</td><td class=f2r>1-1</td></tr>
 <tr class=f1><td class=f11>01:00</td>
-<td><span class='scflag2 f2215_BRA'>&nbsp;</span>&nbsp;BR1</td>
-<td onmouseover='mov(event,11)' onmouseout='mou()'><pre class=pr3>FIGUEIRENSE - CRICIUMA          </pre></td>
-<td class=pl30>33 </td><td class=pr25>29</td><td class=pl35>38</td>
-<td class=Fai1><span class='sctip tip_emp'>&nbsp;</span>emp</td>
-<td class=al20>1.95</td><td class=ar40>3.20</td><td class=al40>3.70</td><td class=f1l>0-<b>1</b> </td><td class=f1l><b>1</b>-0</td><td class=f11>50 </td><td class=f11w>50</td><td class=f1r>1-1</td></tr>
-<tr class=f2><td class=f21>23:30</td>
-<td><span class='scflag2 f2215_BRA'>&nbsp;</span>&nbsp;BR1</td>
-<td onmouseover='mov(event,12)' onmouseout='mou()'><pre>GOIAS - ATLETICO MG       </pre></td>
-<td class=pl25>27 </td><td class=pl25>27</td><td class=pr45>46</td>
-<td class=Fai2><span class='sctip tip_r212'>&nbsp;</span>r212</td>
-<td class=al30>2.65</td><td class=al40>3.05</td><td class=ar30>2.60</td><td class=f2l>0-1 </td><td class=f2l>0-2</td><td class=f21w>50 </td><td class=f21>50</td><td class=f2r>2-3</td></tr>
+<td><span class='scflag2 f2215_ARG'>&nbsp;</span>&nbsp;AR2</td>
+<td onmouseover='mov(event,7)' onmouseout='mou()'><pre class=pr3>SARMIENTO JUNIN - SANTA MARINA      </pre></td>
+<td class=pl65>73 </td><td class=pr25>20</td><td class=pl25>7 </td>
+<td class=Fai1><span class='sctip tip_w1'>&nbsp;</span>w1</td>
+<td class=al20>1.85</td><td class=ar40>3.15</td><td class=al50>4.15</td><td class=f1l><b>2</b>-0 </td><td class=f1l>3-0</td><td class=f11w>43 </td><td class=f11>57</td><td class=f1r>2-2</td></tr>
+<tr class=f2><td class=f21>22:00</td>
+<td><span class='scflag2 f2215_ARG'>&nbsp;</span>&nbsp;ARC</td>
+<td onmouseover='mov(event,8)' onmouseout='mou()'><pre>RACING CLUB - ARGENTINOS        </pre></td>
+<td class=pl55>59 </td><td class=pl25>25</td><td class=pr25>16</td>
+<td class=Fai2><span class='sctip tip_w1'>&nbsp;</span>w1</td>
+<td class=al20>2.05</td><td class=al40>3.05</td><td class=ar40>3.59</td><td class=f2l>1-0 </td><td class=f2l>2-0</td><td class=f21>52 </td><td class=f21w>48</td><td class=f2r>0-1</td></tr>
 <tr class=f1><td class=f11>02:00</td>
 <td><span class='scflag2 f2215_BRA'>&nbsp;</span>&nbsp;BR1</td>
-<td onmouseover='mov(event,13)' onmouseout='mou()'><pre class=pr3>PALMEIRAS - FLAMENGO          </pre></td>
-<td class=pl65>71 </td><td class=pr25>20</td><td class=pl25>9 </td>
+<td onmouseover='mov(event,9)' onmouseout='mou()'><pre class=pr3>BOTAFOGO - BAHIA             </pre></td>
+<td class=pl55>59 </td><td class=pl25>25</td><td class=pr25>16</td>
 <td class=Fai1><span class='sctip tip_w1'>&nbsp;</span>w1</td>
-<td class=al30>2.25</td><td class=ar40>3.10</td><td class=al40>3.05</td><td class=f1l><b>2</b>-0 </td><td class=f1l>3-0</td><td class=f11w>41 </td><td class=f11>59</td><td class=f1r>2-2</td></tr>
+<td class=al20>1.85</td><td class=al40>3.25</td><td class=ar50>4.18</td><td class=f1l>1-0 </td><td class=f1l><b>2</b>-0</td><td class=f11w>51 </td><td class=f11>49</td><td class=f1r>2-3</td></tr>
+<tr class=f2><td class=f21>23:30</td>
+<td><span class='scflag2 f2215_BRA'>&nbsp;</span>&nbsp;BR1</td>
+<td onmouseover='mov(event,10)' onmouseout='mou()'><pre>CORINTHIANS - CHAPECOENSE       </pre></td>
+<td class=pl75>76 </td><td class=pr25>19</td><td class=pl25>5 </td>
+<td class=Fai2><span class='sctip tip_w1'>&nbsp;</span>w1</td>
+<td class=al10>1.40</td><td class=ar50>4.00</td><td class=al60>7.50</td><td class=f2l>2-0 </td><td class=f2l><b>1</b>-0</td><td class=f21>49 </td><td class=f21w>51</td><td class=f2r>1-1</td></tr>
+<tr class=f1><td class=f11>02:00</td>
+<td><span class='scflag2 f2215_BRA'>&nbsp;</span>&nbsp;BR1</td>
+<td onmouseover='mov(event,11)' onmouseout='mou()'><pre class=pr3>CORITIBA - SAO PAULO         </pre></td>
+<td class=pr25>25 </td><td class=pl30>30</td><td class=pl45>45</td>
+<td class=Fai1><span class='sctip tip_w2X'>&nbsp;</span>w2X</td>
+<td class=ar30>2.60</td><td class=al40>3.10</td><td class=al30>2.60</td><td class=f1l>0-<b>1</b> </td><td class=f1l>0-2</td><td class=f11w>49 </td><td class=f11>51</td><td class=f1r>3-1</td></tr>
 <tr class=f2><td class=f21>01:00</td>
 <td><span class='scflag2 f2215_BRA'>&nbsp;</span>&nbsp;BR1</td>
-<td onmouseover='mov(event,14)' onmouseout='mou()'><pre>SPORT RECIFE - INTERNACIONAL     </pre></td>
-<td class=pl30>35 </td><td class=pr30>30</td><td class=pl30>35</td>
+<td onmouseover='mov(event,12)' onmouseout='mou()'><pre>FIGUEIRENSE - CRICIUMA          </pre></td>
+<td class=pl30>33 </td><td class=pr25>29</td><td class=pl35>38</td>
 <td class=Fai2><span class='sctip tip_emp'>&nbsp;</span>emp</td>
-<td class=al30>2.85</td><td class=ar40>3.10</td><td class=al30>2.35</td><td class=f2l>1-<b>0</b> </td><td class=f2l><b>0</b>-1</td><td class=f21>51 </td><td class=f21w>49</td><td class=f2r>0-0</td></tr>
-<tr class=f1><td class=f11>18:00</td>
-<td><span class='scflag2 f2215_EUL'>&nbsp;</span>&nbsp;EEL</td>
-<td onmouseover='mov(event,15)' onmouseout='mou()'><pre class=pr3>APOLLON LIMASSOL - ZURICH            </pre></td>
-<td class=pr35>37 </td><td class=pl25>28</td><td class=pl30>35</td>
+<td class=al20>1.95</td><td class=ar40>3.20</td><td class=al40>3.70</td><td class=f2l>0-<b>1</b> </td><td class=f2l><b>1</b>-0</td><td class=f21>50 </td><td class=f21w>50</td><td class=f2r>1-1</td></tr>
+<tr class=f1><td class=f11>23:30</td>
+<td><span class='scflag2 f2215_BRA'>&nbsp;</span>&nbsp;BR1</td>
+<td onmouseover='mov(event,13)' onmouseout='mou()'><pre class=pr3>GOIAS - ATLETICO MG       </pre></td>
+<td class=pl25>27 </td><td class=pl25>27</td><td class=pr45>46</td>
+<td class=Fai1><span class='sctip tip_r212'>&nbsp;</span>r212</td>
+<td class=al30>2.65</td><td class=al40>3.05</td><td class=ar30>2.60</td><td class=f1l>0-1 </td><td class=f1l>0-2</td><td class=f11w>50 </td><td class=f11>50</td><td class=f1r>2-3</td></tr>
+<tr class=f2><td class=f21>02:00</td>
+<td><span class='scflag2 f2215_BRA'>&nbsp;</span>&nbsp;BR1</td>
+<td onmouseover='mov(event,14)' onmouseout='mou()'><pre>PALMEIRAS - FLAMENGO          </pre></td>
+<td class=pl65>71 </td><td class=pr25>20</td><td class=pl25>9 </td>
+<td class=Fai2><span class='sctip tip_w1'>&nbsp;</span>w1</td>
+<td class=al30>2.25</td><td class=ar40>3.10</td><td class=al40>3.05</td><td class=f2l><b>2</b>-0 </td><td class=f2l>3-0</td><td class=f21w>41 </td><td class=f21>59</td><td class=f2r>2-2</td></tr>
+<tr class=f1><td class=f11>01:00</td>
+<td><span class='scflag2 f2215_BRA'>&nbsp;</span>&nbsp;BR1</td>
+<td onmouseover='mov(event,15)' onmouseout='mou()'><pre class=pr3>SPORT RECIFE - INTERNACIONAL     </pre></td>
+<td class=pl30>35 </td><td class=pr30>30</td><td class=pl30>35</td>
 <td class=Fai1><span class='sctip tip_emp'>&nbsp;</span>emp</td>
-<td class=ar30>2.48</td><td class=al40>3.21</td><td class=al30>2.83</td><td class=f1l>0-1 </td><td class=f1l>0-<b>2</b></td><td class=f11w>47 </td><td class=f11>53</td><td class=f1r>3-2</td></tr>
+<td class=al30>2.85</td><td class=ar40>3.10</td><td class=al30>2.35</td><td class=f1l>1-<b>0</b> </td><td class=f1l><b>0</b>-1</td><td class=f11>51 </td><td class=f11w>49</td><td class=f1r>0-0</td></tr>
 <tr class=f2><td class=f21>18:00</td>
 <td><span class='scflag2 f2215_EUL'>&nbsp;</span>&nbsp;EEL</td>
 <td onmouseover='mov(event,16)' onmouseout='mou()'><pre>BESIKTAS - ASTERAS TR        </pre></td>
@@ -385,6 +385,12 @@ Thursday 18-Sep |
 <td class=pl30>32 </td><td class=pl25>27</td><td class=pr35>41</td>
 <td class=Fai2><span class='sctip tip_r212'>&nbsp;</span>r212</td>
 <td class=al30>2.25</td><td class=al40>3.25</td><td class=ar30>2.85</td><td class=f2l><b>0</b>-1 </td><td class=f2l><b>0</b>-2</td><td class=f21w>44 </td><td class=f21>56</td><td class=f2r>0-3</td></tr>
+<tr class=f1><td class=f11>18:00</td>
+<td><span class='scflag2 f2215_SWE'>&nbsp;</span>&nbsp;SE2</td>
+<td onmouseover='mov(event,49)' onmouseout='mou()'><pre class=pr3>JONKOPINGS SODRA - SIRIUS            </pre></td>
+<td class=pr45>48 </td><td class=pl30>30</td><td class=pl25>22</td>
+<td class=Fai1><span class='sctip tip_r1X1'>&nbsp;</span>r1X1</td>
+<td class=ar30>2.40</td><td class=al40>3.30</td><td class=al30>2.70</td><td class=f1l>1-0 </td><td class=f1l>2-0</td><td class=f11w>44 </td><td class=f11>56</td><td class=f1r>3-1</td></tr>
 </table><table>
 <tr class=f1><td colspan=14 align=left style='vertical-align:top' height=14><font face='Verdana, Arial, Helvetica, sans-serif' size=1 color=#666666><img src='/imgs/arrow-green-u-small.gif' alt='' width=24 height=20 align=middle><a href=#> Back </a> to the Top </font></td></tr></table>
 <table style='text-align: left; margin-left: auto; margin-right: auto; width: 738px height: 90px;' border=0 cellpadding=1 cellspacing=1>
